# logipack

./: Makefile
docs/: figure-er-diagram.md  figure-rest-communication-schema.md  figure-role-access-schema.md  figure-sequence-diagram.md  figure-shipment-state-diagram.md  figure-system-architecture-schema.md  figure-traceability-audit-strata.md  figure-use-case-diagram.md  figure-use-case-diagram.mmd  figure-use-case-diagram.puml  (+2 more)
logipack-core/crates/core-application/: Cargo.toml
logipack-core/crates/core-application/src/: lib.rs
logipack-core/crates/core-application/src/audit/: emit.rs  mod.rs  types.rs
logipack-core/crates/core-application/src/clients/: create.rs  delete.rs  update.rs
logipack-core/crates/core-application/src/employee_offices/: assign.rs  remove.rs
logipack-core/crates/core-application/src/employees/: create.rs  delete.rs  get.rs  list.rs  update.rs
logipack-core/crates/core-application/src/offices/: create.rs  delete.rs  update.rs
logipack-core/crates/core-application/src/shipments/: change_status.rs  create.rs  get.rs  list.rs
logipack-core/crates/core-application/tests/: audit_usecases.rs  clients_usecases.rs  employee_offices_usecases.rs  employees_usecases.rs  offices_usecases.rs  shipments_usecases.rs
logipack-core/crates/core-data/: Cargo.toml
logipack-core/crates/core-data/migration/src/: lib.rs  m2026_03_07_create_audit_events.rs
logipack-core/crates/core-data/src/entity/: audit_events.rs  mod.rs
logipack-core/crates/core-data/src/repository/: analytics_repo.rs  audit_repo.rs  employee_offices_repo.rs  employees_repo.rs  mod.rs  reporting_repo.rs  users_repo.rs
logipack-core/crates/core-data/tests/: audit_repo.rs  employee_offices_repo.rs  employees_repo.rs  shipments_repo.rs
logipack-hub/hub-api/: Cargo.toml
logipack-hub/hub-api/src/: actor_extractor.rs  app.rs  error.rs
logipack-hub/hub-api/src/auth/: middleware.rs
logipack-hub/hub-api/src/dto/: analytics.rs  audit.rs  clients.rs  employee_offices.rs  employees.rs  me.rs  mod.rs  offices.rs  reports.rs  shipments.rs
logipack-hub/hub-api/src/routes/: admin.rs  analytics.rs  clients.rs  me.rs  mod.rs  offices.rs  reports.rs  shipments.rs
logipack-hub/hub-api/src/routes/admin_ep/: audit.rs  clients.rs  employee_offices.rs  employees.rs  mod.rs  offices.rs
logipack-hub/hub-api/tests/: analytics.rs  audit.rs  auth_jwt.rs  helpers.rs  me.rs  reports.rs  shipments_get.rs  shipments_timeline.rs
logipack-hub/hub-api/tests/audit/: audit_admin_only.rs  audit_list.rs
logipack-hub/hub-api/tests/clients/: clients_create.rs  clients_update.rs
logipack-hub/hub-api/tests/employees/: employees_create.rs  employees_get.rs  employees_list.rs  employees_update.rs
logipack-hub/hub-api/tests/offices/: offices_create.rs  offices_update.rs
(+141 files in other folders)
