[package]
name = "hub-api"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

core-domain = { path = "../../logipack-core/crates/core-domain" }
core-application = { path = "../../logipack-core/crates/core-application" }
core-data = { path = "../../logipack-core/crates/core-data" }
core-eventstore = { path = "../../logipack-core/crates/core-eventstore" }
core-contracts = { path = "../../logipack-core/crates/core-contracts" }
core-data-migration = { path = "../../logipack-core/crates/core-data/migration" }
core-eventstore-migration = { path = "../../logipack-core/crates/core-eventstore/migration" }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = "1.19.0"
sea-orm-migration = "1.1.19"
dotenvy = "0.15.7"
strata-rs = "0.4.4"
base64 = "0.22"
hyper = "1.8.1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1.21.3"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
test-infra = { path = "../../logipack-core/crates/test-infra" }
