[package]
name = "core-application"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
uuid = "1.19.0"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

core-domain = { path = "../core-domain" }
core-data = { path = "../core-data" }
core-eventstore = { path = "../core-eventstore" }
strata-rs = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

test-infra = { path = "../test-infra" }
