[package]
name = "core-data"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
core-domain = { path = "../core-domain" }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-infra = { path = "../test-infra" }
core-domain = { path = "../core-domain" }
